# autobilans

./: .gitignore  README.md  pyproject.toml
.Jules/: palette.md
.jules/: bolt.md
8spzoo/2021/: 2022_06_20_SF_8_2021.xml  zois2021.xlsx
8spzoo/2022/: 2023-03-06-SF-8-2022.xml  zois2022.xlsx
8spzoo/2023/: 2024-01-27-SF-8-2023podpisanyJW EB TS.xml  zois2023.xlsx
8spzoo/2024/: 2025-01-02-SF-8-2024.xml  zois2024.xlsx
8spzoo/2025/: 2026_01_24_SF_8_2025.xml  zois2025.xlsx
config/: local.example.yaml  manual_rules.yaml  xml_aliases.yaml
metro/2022/: 2023_01_29_SF_metro_2022.xml  zois2022.xlsx
metro/2023/: 2024-02-11-SF-metro-2023podpisany.xml  zois2023.xlsx
metro/2024/: 2025-01-26-SF-metro-2024 jw+.xml  zois2024.xlsx
metro/2025/: 2026-01-30-SF-metro-2025 jw.xml  zois2025.xlsx
nordoen/2024/: SF-31-12-2024-nordoen ostateczny JW OW.xml  zois 2024.xlsx
nordoen/2025/: zois 2025.xlsx  (+1 more)
scripts/: analyze_run_gaps.py  build_dataset_index.py  run_all_pipelines.py  run_local_pipeline.py  setup_local.ps1
tests/: test_aliases.py  test_balance_calculation.py  test_balance_pdf_export.py  test_balance_xlsx_export.py  test_batch_script.py  test_bilans_xml_parser.py  test_cli_exceptions.py  test_cli_status_hints.py  test_code_contributions.py  test_decision_policies.py  test_decision_suggestions.py  test_exceptions.py  test_gap_analysis.py  test_gap_analysis_script.py  test_isolated_company_pipeline.py  test_manual_rules.py  test_mapping_export.py  test_mapping_rules.py  test_onboard_dataset.py  test_validation_compare.py  test_validation_export.py  test_zois_parser.py
(+52 files in other folders)
