[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autobilans"
version = "0.1.0"
description = "Lokalny pipeline do generowania bilansu na podstawie ZOiS"
requires-python = ">=3.10"
dependencies = [
  "openpyxl>=3.1.5",
  "pydantic>=2.8.2",
  "PyYAML>=6.0.2",
  "reportlab>=4.4.10",
  "xlsxwriter>=3.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
